template/deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: deployment-name
  labels:
    label-key1: label-value1
  annotations:
    annotation-key1: annotation-value1
spec:
  replicas: 3
  selector: 
    matchLabels:
      label-key1: label-value1
    template:
      metadata: 
        name: pod-name
        labels:
          label-key1: label-value1
      spec:
        containers:
          - name: container-name
            image: image-name
            ports:
              - containerPort: 80
            readinessProbe:
              httpGet:
                path: /health
                port: 80
              initialDelaySeconds: 0
              periodSeconds: 10
              failureThreshold: 3
              successThreshold: 1
              timeoutSeconds: 1
