template/pod-with-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-name
  labels:
    label-key1: label-value1
    label-key2: label-value2
    label-key3: label-value3
spec:
  containers:
  - name: container-name
    image: image-name
    ports:
    - containerPort: 80
