template/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-name
spec:
  selector:
    label-key1: label-value1
  ports:
    - port: 8080
      targetPort: 80
